; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/time/extr_tick-broadcast.c_tick_set_periodic_handler.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/time/extr_tick-broadcast.c_tick_set_periodic_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clock_event_device = type { i32 }

@tick_handle_periodic = common dso_local global i32 0, align 4
@tick_handle_periodic_broadcast = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @tick_set_periodic_handler(%struct.clock_event_device* %0, i32 %1) #0 {
  %3 = alloca %struct.clock_event_device*, align 8
  %4 = alloca i32, align 4
  store %struct.clock_event_device* %0, %struct.clock_event_device** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %11, label %7

7:                                                ; preds = %2
  %8 = load i32, i32* @tick_handle_periodic, align 4
  %9 = load %struct.clock_event_device*, %struct.clock_event_device** %3, align 8
  %10 = getelementptr inbounds %struct.clock_event_device, %struct.clock_event_device* %9, i32 0, i32 0
  store i32 %8, i32* %10, align 4
  br label %15

11:                                               ; preds = %2
  %12 = load i32, i32* @tick_handle_periodic_broadcast, align 4
  %13 = load %struct.clock_event_device*, %struct.clock_event_device** %3, align 8
  %14 = getelementptr inbounds %struct.clock_event_device, %struct.clock_event_device* %13, i32 0, i32 0
  store i32 %12, i32* %14, align 4
  br label %15

15:                                               ; preds = %11, %7
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
